@@ -12,6 +12,8 @@ MIDIboxSEQ V3.4h
 
   o bugfix for mixer map: wrong events were sent via IIC3 and IIC4 port
 
+  o mixer map 0..127 can now be dumped from external via CC#111
+
 
 MIDIboxSEQ V3.4g
 ~~~~~~~~~~~~~~~~
